test/fail/enums_and_variants/scoped_variant_direct.lly
#[
SyntaxError: Some has not been declared.
    from scoped_variant_direct.lly:11
]#

enum Option[A] {
	::Some(A)
	::None
}

var opt: Option[integer] = Some(10)
